--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,17 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
+  min-height: 100vh;
+  height: 100vh;
+}
+
+#root {
+  height: 100vh;
+  min-height: 100vh;
+}
+
+html {
+  height: 100vh;
 }
 
 a {
